# peri

./: .gitignore  .mcp.json  CLAUDE.md  COMPATIBLE.md  Cargo.toml  README.md  log.md  progress.md
.github/workflows/: release-agent.yml  release-gig.yml
acpx-g/: Cargo.toml  README.md  progress.md
acpx-g/src/: main.rs  schema.rs
acpx-g/static/: app.js  editor.css  editor.js  index.html  run-detail.css  run-detail.js  runs.js  style.css
langfuse-client/src/: batcher.rs
peri-cli/: README.md  package.json
peri-dag/: README.md  progress.md
peri-dag/examples/: build-lib.yaml  ci-pipeline.yaml  notify.yaml  setup.yml  simple-ci.yaml
peri-dag/src/: main.rs  schema.rs  watcher.rs
peri-dag/static/: app.js  index.html  style.css
peri-middlewares/src/: compact_middleware.rs  compact_middleware_test.rs  lib.rs
peri-tui/: Cargo.toml
peri-tui/src/: acp_stdio.rs  cli_print.rs  event.rs  lib.rs  main.rs  mimalloc_config.rs  mimalloc_config_test.rs  self_update.rs
perihelion-lsp/src/: client.rs  pool.rs
prompts/: subagent.md
rust-agent-middlewares/: Cargo.toml
rust-agent-middlewares/src/: claude_agent_parser.rs  lib.rs
rust-agent-tui/: Cargo.toml
rust-agent-tui/src/: event.rs  main.rs  prompt.rs
rust-create-agent/: Cargo.toml
scripts/: install-gig.ps1  install-gig.sh  install.sh
side-projects/daytona/: .env.example  package.json  server.ts
side-projects/git-graph/: README.md
side-projects/llm-gateway/: index.ts
side-projects/telegram-bridge/: Cargo.toml
side-projects/telegram-bridge/src/: main.rs  mcp_server.rs  telegram.rs  types.rs
(+312 files in other folders)
